# rust-practice

./: Cargo.toml
collection_practice/: Cargo.toml
collection_practice/src/: hash_map_practice.rs  main.rs
collection_practice/src/hash_map_practice/: integer_mean_median_mode.rs  new_hash_map.rs  pig_latin.rs  word_count.rs
error_practice/: Cargo.toml
